force-app/main/default/objects/Access_Control_Profile__c/Access_Control_Profile__c.object-meta.xml
<CustomObject>
    <description>Onboarding/Offboarding of access and devices for employees</description>
    <label>Access Control Profile</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>ACP Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Access Control Profile</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>