force-app/main/default/objects/Access_Control_Profile__c/fields/Active_Directory_Admin_Revoke_Date__c.field-meta.xml
<CustomField>
    <fullName>Active_Directory_Admin_Revoke_Date__c</fullName>
    <label>Active Directory Admin Revoke Date</label>
    <type>Date</type>
</CustomField>