force-app/main/default/objects/Access_Control_Profile__c/fields/Active_Directory_Provision_Date__c.field-meta.xml
<CustomField>
    <fullName>Active_Directory_Provision_Date__c</fullName>
    <description>Date Active Directory was provided.</description>
    <label>Active Directory Provision Date</label>
    <type>Date</type>
</CustomField>