force-app/main/default/objects/Access_Control_Profile__c/fields/Active_Directory_Revoke_Date__c.field-meta.xml
<CustomField>
    <fullName>Active_Directory_Revoke_Date__c</fullName>
    <description>Date Active Directory was revoked.</description>
    <label>Active Directory Revoke Date</label>
    <type>Date</type>
</CustomField>