force-app/main/default/objects/Access_Control_Profile__c/fields/Adobe_Provision_Date__c.field-meta.xml
<CustomField>
    <fullName>Adobe_Provision_Date__c</fullName>
    <description>Date Adobe was provided.</description>
    <label>Adobe Provision Date</label>
    <type>Date</type>
</CustomField>