force-app/main/default/objects/Access_Control_Profile__c/fields/Adobe_Revoke_Date__c.field-meta.xml
<CustomField>
    <fullName>Adobe_Revoke_Date__c</fullName>
    <description>Date Adobe was revoked.</description>
    <label>Adobe Revoke Date</label>
    <type>Date</type>
</CustomField>