force-app/main/default/objects/Access_Control_Profile__c/fields/ADP_Provision_Date__c.field-meta.xml
<CustomField>
    <fullName>ADP_Provision_Date__c</fullName>
    <description>The date ADP access was provided</description>
    <label>ADP Provision Date</label>
    <type>Date</type>
</CustomField>