force-app/main/default/objects/Access_Control_Profile__c/fields/ADP_Revoke_Date__c.field-meta.xml
<CustomField>
    <fullName>ADP_Revoke_Date__c</fullName>
    <description>The date ADP access was revoked</description>
    <label>ADP Revoke Date</label>
    <type>Date</type>
</CustomField>