force-app/main/default/objects/Access_Control_Profile__c/fields/Aha_Provision_Date__c.field-meta.xml
<CustomField>
    <fullName>Aha_Provision_Date__c</fullName>
    <description>Date Aha! was provided.</description>
    <label>Aha! Provision Date</label>
    <type>Date</type>
</CustomField>