force-app/main/default/objects/Access_Control_Profile__c/fields/Aha_Revoke_Date__c.field-meta.xml
<CustomField>
    <fullName>Aha_Revoke_Date__c</fullName>
    <description>Date Aha! was revoked.</description>
    <label>Aha! Revoke Date</label>
    <type>Date</type>
</CustomField>