force-app/main/default/objects/Access_Control_Profile__c/fields/Airwave_Provision_Date__c.field-meta.xml
<CustomField>
    <fullName>Airwave_Provision_Date__c</fullName>
    <label>Airwave Provision Date</label>
    <type>Date</type>
</CustomField>