force-app/main/default/objects/Access_Control_Profile__c/fields/Airwave_Revoke_Date__c.field-meta.xml
<CustomField>
    <fullName>Airwave_Revoke_Date__c</fullName>
    <label>Airwave Revoke Date</label>
    <type>Date</type>
</CustomField>