force-app/main/default/objects/Access_Control_Profile__c/fields/Artifactory_Provision_Date__c.field-meta.xml
<CustomField>
    <fullName>Artifactory_Provision_Date__c</fullName>
    <description>Date Artifactory access was provided.</description>
    <label>Artifactory Provision Date</label>
    <type>Date</type>
</CustomField>