force-app/main/default/objects/Access_Control_Profile__c/fields/Artifactory_Revoke_Date__c.field-meta.xml
<CustomField>
    <fullName>Artifactory_Revoke_Date__c</fullName>
    <description>Date Artifactory access was revoked.</description>
    <label>Artifactory Revoke Date</label>
    <type>Date</type>
</CustomField>