force-app/main/default/objects/Access_Control_Profile__c/fields/Atlassian_Server_Admin_Provision_Date__c.field-meta.xml
<CustomField>
    <fullName>Atlassian_Server_Admin_Provision_Date__c</fullName>
    <label>Atlassian Server Admin Provision Date</label>
    <type>Date</type>
</CustomField>