force-app/main/default/objects/Access_Control_Profile__c/fields/AWS_Provision_Date__c.field-meta.xml
<CustomField>
    <fullName>AWS_Provision_Date__c</fullName>
    <description>The date AWS was provisioned</description>
    <label>AWS Provision Date</label>
    <type>Date</type>
</CustomField>