force-app/main/default/objects/Access_Control_Profile__c/fields/AWS_Revoke_Date__c.field-meta.xml
<CustomField>
    <fullName>AWS_Revoke_Date__c</fullName>
    <description>The date AWS was revoked.</description>
    <label>AWS Revoke Date</label>
    <type>Date</type>
</CustomField>