force-app/main/default/objects/Access_Control_Profile__c/fields/BizOps_AWS_Provision_Date__c.field-meta.xml
<CustomField>
    <fullName>BizOps_AWS_Provision_Date__c</fullName>
    <label>BizOps AWS Provision Date</label>
    <type>Date</type>
</CustomField>