force-app/main/default/objects/Access_Control_Profile__c/fields/BizOps_IT_backup_server_Provision_Date__c.field-meta.xml
<CustomField>
    <fullName>BizOps_IT_backup_server_Provision_Date__c</fullName>
    <label>BizOps/IT backup server Provision Date</label>
    <type>Date</type>
</CustomField>