force-app/main/default/objects/Access_Control_Profile__c/fields/Box_Administration_Provision_Date__c.field-meta.xml
<CustomField>
    <fullName>Box_Administration_Provision_Date__c</fullName>
    <label>Box Administration Provision Date</label>
    <type>Date</type>
</CustomField>