force-app/main/default/objects/Access_Control_Profile__c/fields/Box_Provision_Date__c.field-meta.xml
<CustomField>
    <fullName>Box_Provision_Date__c</fullName>
    <description>Date Box was provided.</description>
    <label>Box Provision Date</label>
    <type>Date</type>
</CustomField>