force-app/main/default/objects/Access_Control_Profile__c/fields/Box_Revoke_Date__c.field-meta.xml
<CustomField>
    <fullName>Box_Revoke_Date__c</fullName>
    <description>Date Box was revoked.</description>
    <label>Box Revoke Date</label>
    <type>Date</type>
</CustomField>