force-app/main/default/objects/Access_Control_Profile__c/fields/Business_Card_Information__c.field-meta.xml
<CustomField>
    <fullName>Business_Card_Information__c</fullName>
    <description>Information to be displayed on their business card</description>
    <label>Business Card Information</label>
    <length>255</length>
    <type>Text</type>
</CustomField>