force-app/main/default/objects/Access_Control_Profile__c/fields/Celigo_Provision_Date__c.field-meta.xml
<CustomField>
    <fullName>Celigo_Provision_Date__c</fullName>
    <description>The date celigo was provisioned</description>
    <label>Celigo Provision Date</label>
    <type>Date</type>
</CustomField>