force-app/main/default/objects/Access_Control_Profile__c/fields/Celigo_Revoke_Date__c.field-meta.xml
<CustomField>
    <fullName>Celigo_Revoke_Date__c</fullName>
    <description>The date celigo was revoked</description>
    <label>Celigo Revoke Date</label>
    <type>Date</type>
</CustomField>