force-app/main/default/objects/Access_Control_Profile__c/fields/Cisco_VPN_Duration__c.field-meta.xml
<CustomField>
    <fullName>Cisco_VPN_Duration__c</fullName>
    <label>Cisco VPN Duration</label>
    <type>Date</type>
</CustomField>