force-app/main/default/objects/Access_Control_Profile__c/fields/Cisco_VPN_Permissions__c.field-meta.xml
<CustomField>
    <fullName>Cisco_VPN_Permissions__c</fullName>
    <label>Cisco VPN Permissions</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Read</fullName>
            </value>
            <value>
                <fullName>Write</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>