force-app/main/default/objects/Access_Control_Profile__c/fields/Cisco_VPN_Provision_Date__c.field-meta.xml
<CustomField>
    <fullName>Cisco_VPN_Provision_Date__c</fullName>
    <description>Date VPN was provided.</description>
    <label>Cisco VPN Provision Date</label>
    <type>Date</type>
</CustomField>