force-app/main/default/objects/Access_Control_Profile__c/fields/Cisco_VPN_Revoke_Date__c.field-meta.xml
<CustomField>
    <fullName>Cisco_VPN_Revoke_Date__c</fullName>
    <description>Date VPN was revoked.</description>
    <label>Cisco VPN Revoke Date</label>
    <type>Date</type>
</CustomField>