force-app/main/default/objects/Access_Control_Profile__c/fields/Comcast_modem_Revoke_Date__c.field-meta.xml
<CustomField>
    <fullName>Comcast_modem_Revoke_Date__c</fullName>
    <label>Comcast modem Revoke Date</label>
    <type>Date</type>
</CustomField>