force-app/main/default/objects/Access_Control_Profile__c/fields/Concur_Provision_Date__c.field-meta.xml
<CustomField>
    <fullName>Concur_Provision_Date__c</fullName>
    <description>Date Concur was provided.</description>
    <label>Concur Provision Date</label>
    <type>Date</type>
</CustomField>