force-app/main/default/objects/Access_Control_Profile__c/fields/Concur_Revoke_Date__c.field-meta.xml
<CustomField>
    <fullName>Concur_Revoke_Date__c</fullName>
    <description>Date Concur was revoked.</description>
    <label>Concur Revoke Date</label>
    <type>Date</type>
</CustomField>