force-app/main/default/objects/Access_Control_Profile__c/fields/Confluence_Provision_Date__c.field-meta.xml
<CustomField>
    <fullName>Confluence_Provision_Date__c</fullName>
    <description>Date Confluence was provided.</description>
    <label>Confluence Provision Date</label>
    <type>Date</type>
</CustomField>