force-app/main/default/objects/Access_Control_Profile__c/fields/Confluence_Revoke_Date__c.field-meta.xml
<CustomField>
    <fullName>Confluence_Revoke_Date__c</fullName>
    <description>Date Confluence was revoked.</description>
    <label>Confluence Revoke Date</label>
    <type>Date</type>
</CustomField>