force-app/main/default/objects/Access_Control_Profile__c/fields/Conga_Composer_Provision_Date__c.field-meta.xml
<CustomField>
    <fullName>Conga_Composer_Provision_Date__c</fullName>
    <label>Conga Composer Provision Date</label>
    <type>Date</type>
</CustomField>