force-app/main/default/objects/Access_Control_Profile__c/fields/Contract_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_End_Date__c</fullName>
    <description>The date the contract will end for the contractor.</description>
    <label>Contract End Date</label>
    <type>Date</type>
</CustomField>