force-app/main/default/objects/Access_Control_Profile__c/fields/Core_Switches_Provision_Date__c.field-meta.xml
<CustomField>
    <fullName>Core_Switches_Provision_Date__c</fullName>
    <label>Core Switches Provision Date</label>
    <type>Date</type>
</CustomField>