force-app/main/default/objects/Access_Control_Profile__c/fields/Domain_Controller_Provision_Date__c.field-meta.xml
<CustomField>
    <fullName>Domain_Controller_Provision_Date__c</fullName>
    <label>Domain Controller Provision Date</label>
    <type>Date</type>
</CustomField>