force-app/main/default/objects/Access_Control_Profile__c/fields/Door_Badge_ID__c.field-meta.xml
<CustomField>
    <fullName>Door_Badge_ID__c</fullName>
    <description>The id of the door badge provided to the user.</description>
    <label>Door Badge ID</label>
    <length>25</length>
    <type>Text</type>
</CustomField>