force-app/main/default/objects/Access_Control_Profile__c/fields/Door_Badges_Provision_Date__c.field-meta.xml
<CustomField>
    <fullName>Door_Badges_Provision_Date__c</fullName>
    <description>Date Door Badges were provided.</description>
    <label>Door Badges Provision Date</label>
    <type>Date</type>
</CustomField>