force-app/main/default/objects/Access_Control_Profile__c/fields/Door_Badges_Reissue_Date__c.field-meta.xml
<CustomField>
    <fullName>Door_Badges_Reissue_Date__c</fullName>
    <inlineHelpText>Date of reprint or re-issued badge</inlineHelpText>
    <label>Door Badges Re-issue Date</label>
    <type>Date</type>
</CustomField>