force-app/main/default/objects/Access_Control_Profile__c/fields/Door_Badges_Revoke_Date__c.field-meta.xml
<CustomField>
    <fullName>Door_Badges_Revoke_Date__c</fullName>
    <description>Date Door Badges were revoked.</description>
    <label>Door Badges Revoke Date</label>
    <type>Date</type>
</CustomField>