force-app/main/default/objects/Access_Control_Profile__c/fields/Door_system_Provision_Date__c.field-meta.xml
<CustomField>
    <fullName>Door_system_Provision_Date__c</fullName>
    <label>Door system Provision Date</label>
    <type>Date</type>
</CustomField>