force-app/main/default/objects/Access_Control_Profile__c/fields/Employee_Department__c.field-meta.xml
<CustomField>
    <fullName>Employee_Department__c</fullName>
    <label>Employee Department</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Business Operations and IT</fullName>
            </value>
            <value>
                <fullName>Central Bid Desk</fullName>
            </value>
            <value>
                <fullName>Contracts</fullName>
            </value>
            <value>
                <fullName>Engineering</fullName>
            </value>
            <value>
                <fullName>Finance</fullName>
            </value>
            <value>
                <fullName>GDS Operations</fullName>
            </value>
            <value>
                <fullName>HR</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Partner Sales and Solutions</fullName>
            </value>
            <value>
                <fullName>Product Management</fullName>
            </value>
            <value>
                <fullName>Project Management</fullName>
            </value>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>Service Delivery Manager</fullName>
                <isActive>false</isActive>
                <label>Service Delivery Manager</label>
            </value>
            <value>
                <fullName>Service Engineering</fullName>
            </value>
            <value>
                <fullName>Solution Design Engineering</fullName>
            </value>
            <value>
                <fullName>Support</fullName>
            </value>
            <value>
                <fullName>System Architecture</fullName>
            </value>
            <value>
                <fullName>Technical Sales Architects</fullName>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>