force-app/main/default/objects/Access_Control_Profile__c/fields/Employee_Termination_Date__c.field-meta.xml
<CustomField>
    <fullName>Employee_Termination_Date__c</fullName>
    <description>Termination date of the employee</description>
    <label>Employee Termination Date</label>
    <type>Date</type>
</CustomField>