force-app/main/default/objects/Access_Control_Profile__c/fields/Extension_Assigned__c.field-meta.xml
<CustomField>
    <fullName>Extension_Assigned__c</fullName>
    <description>The extension of the employees desk phone.</description>
    <label>Extension # Assigned</label>
    <type>Phone</type>
</CustomField>