force-app/main/default/objects/Access_Control_Profile__c/fields/Firewalls_Provision_Date__c.field-meta.xml
<CustomField>
    <fullName>Firewalls_Provision_Date__c</fullName>
    <label>Firewalls Provision Date</label>
    <type>Date</type>
</CustomField>