force-app/main/default/objects/Access_Control_Profile__c/fields/Firewalls_Revoke_Date__c.field-meta.xml
<CustomField>
    <fullName>Firewalls_Revoke_Date__c</fullName>
    <label>Firewalls Revoke Date</label>
    <type>Date</type>
</CustomField>