force-app/main/default/objects/Access_Control_Profile__c/fields/Fortianalyzer_Provision_Date__c.field-meta.xml
<CustomField>
    <fullName>Fortianalyzer_Provision_Date__c</fullName>
    <label>Fortianalyzer Provision Date</label>
    <type>Date</type>
</CustomField>