force-app/main/default/objects/Access_Control_Profile__c/fields/Fortianalyzer_Revoke_Date__c.field-meta.xml
<CustomField>
    <fullName>Fortianalyzer_Revoke_Date__c</fullName>
    <label>Fortianalyzer Revoke Date</label>
    <type>Date</type>
</CustomField>