force-app/main/default/objects/Access_Control_Profile__c/fields/GoTo_Meeting_Provision_Date__c.field-meta.xml
<CustomField>
    <fullName>GoTo_Meeting_Provision_Date__c</fullName>
    <description>Date GoTo Meeting was provided</description>
    <label>GoTo Meeting Provision Date</label>
    <type>Date</type>
</CustomField>