force-app/main/default/objects/Access_Control_Profile__c/fields/GoTo_Meeting_Revoke_Date__c.field-meta.xml
<CustomField>
    <fullName>GoTo_Meeting_Revoke_Date__c</fullName>
    <description>Date GoTo Meeting was revoked.</description>
    <label>GoTo Meeting Revoke Date</label>
    <type>Date</type>
</CustomField>