force-app/main/default/objects/Access_Control_Profile__c/fields/Home_Address__c.field-meta.xml
<CustomField>
    <fullName>Home_Address__c</fullName>
    <description>Home Address of the new hire.</description>
    <label>Home Address</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>