force-app/main/default/objects/Access_Control_Profile__c/fields/Jenkins_Provision_Date__c.field-meta.xml
<CustomField>
    <fullName>Jenkins_Provision_Date__c</fullName>
    <description>Date Jenkins access was provided.</description>
    <label>Jenkins Provision Date</label>
    <type>Date</type>
</CustomField>