force-app/main/default/objects/Access_Control_Profile__c/fields/Jenkins_Revoke_Date__c.field-meta.xml
<CustomField>
    <fullName>Jenkins_Revoke_Date__c</fullName>
    <description>Date Jenkins access was revoked.</description>
    <label>Jenkins Revoke Date</label>
    <type>Date</type>
</CustomField>