force-app/main/default/objects/Access_Control_Profile__c/fields/Jira_Provision_Date__c.field-meta.xml
<CustomField>
    <fullName>Jira_Provision_Date__c</fullName>
    <description>Date Jira Access was provided.</description>
    <label>Jira Provision Date</label>
    <type>Date</type>
</CustomField>