force-app/main/default/objects/Access_Control_Profile__c/fields/Jira_Revoke_Date__c.field-meta.xml
<CustomField>
    <fullName>Jira_Revoke_Date__c</fullName>
    <description>Date Jira was revoked.</description>
    <label>Jira Revoke Date</label>
    <type>Date</type>
</CustomField>