force-app/main/default/objects/Access_Control_Profile__c/fields/Job_Title__c.field-meta.xml
<CustomField>
    <fullName>Job_Title__c</fullName>
    <label>Job Title</label>
    <length>70</length>
    <type>Text</type>
</CustomField>