force-app/main/default/objects/Access_Control_Profile__c/fields/KnowBe4_Provision_Date__c.field-meta.xml
<CustomField>
    <fullName>KnowBe4_Provision_Date__c</fullName>
    <description>Date KnowBe4 was provided.</description>
    <label>KnowBe4 Provision Date</label>
    <type>Date</type>
</CustomField>