force-app/main/default/objects/Access_Control_Profile__c/fields/KnowBe4_Revoke_Date__c.field-meta.xml
<CustomField>
    <fullName>KnowBe4_Revoke_Date__c</fullName>
    <description>Date KnowBe4 was revoked.</description>
    <label>KnowBe4 Revoke Date</label>
    <type>Date</type>
</CustomField>