force-app/main/default/objects/Access_Control_Profile__c/fields/Lab_Alarm_Platform_Provision_Date__c.field-meta.xml
<CustomField>
    <fullName>Lab_Alarm_Platform_Provision_Date__c</fullName>
    <label>Lab Alarm Platform Provision Date</label>
    <type>Date</type>
</CustomField>