force-app/main/default/objects/Access_Control_Profile__c/fields/Laptop_Provision_Date__c.field-meta.xml
<CustomField>
    <fullName>Laptop_Provision_Date__c</fullName>
    <description>Date Laptop was provided.</description>
    <label>Laptop Provision Date</label>
    <type>Date</type>
</CustomField>