force-app/main/default/objects/Access_Control_Profile__c/fields/Laptop_Revoke_Date__c.field-meta.xml
<CustomField>
    <fullName>Laptop_Revoke_Date__c</fullName>
    <description>Date Laptop was revoked.</description>
    <label>Laptop Revoke Date</label>
    <type>Date</type>
</CustomField>