force-app/main/default/objects/Access_Control_Profile__c/fields/Laptop_Type__c.field-meta.xml
<CustomField>
    <fullName>Laptop_Type__c</fullName>
    <description>The type of laptop the user needs.</description>
    <label>Laptop Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard - Windows</fullName>
            </value>
            <value>
                <fullName>Standard - Linux</fullName>
            </value>
            <value>
                <fullName>Premium - Windows</fullName>
            </value>
            <value>
                <fullName>Premium - Linux</fullName>
            </value>
            <value>
                <fullName>Mac</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>