force-app/main/default/objects/Access_Control_Profile__c/fields/Laptop_Wipe_Date__c.field-meta.xml
<CustomField>
    <fullName>Laptop_Wipe_Date__c</fullName>
    <description>Date the laptop was wiped by IT</description>
    <label>Laptop Wipe Date</label>
    <type>Date</type>
</CustomField>