force-app/main/default/objects/Access_Control_Profile__c/fields/Local_Fortinet_VPN_Provision_Date__c.field-meta.xml
<CustomField>
    <fullName>Local_Fortinet_VPN_Provision_Date__c</fullName>
    <label>Local Fortinet VPN Provision Date</label>
    <type>Date</type>
</CustomField>