force-app/main/default/objects/Access_Control_Profile__c/fields/Manager__c.field-meta.xml
<CustomField>
    <fullName>Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Name of the hiring manager.</description>
    <inlineHelpText>This field should be updated if the employee changes positions in the company.</inlineHelpText>
    <label>Manager/Sponsor</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.Account.Name</field>
            <operation>equals</operation>
            <value>NetNumber</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Access Control Profile</relationshipLabel>
    <relationshipName>Employee_Profile</relationshipName>
    <type>Lookup</type>
</CustomField>