force-app/main/default/objects/Access_Control_Profile__c/fields/Microsoft_Project_Provision_Date__c.field-meta.xml
<CustomField>
    <fullName>Microsoft_Project_Provision_Date__c</fullName>
    <description>Date Microsoft Project was provided.</description>
    <label>Microsoft Project Provision Date</label>
    <type>Date</type>
</CustomField>