force-app/main/default/objects/Access_Control_Profile__c/fields/Microsoft_Project_Revoke_Date__c.field-meta.xml
<CustomField>
    <fullName>Microsoft_Project_Revoke_Date__c</fullName>
    <description>Date Microsoft Project access was revoked.</description>
    <label>Microsoft Project Revoke Date</label>
    <type>Date</type>
</CustomField>