force-app/main/default/objects/Access_Control_Profile__c/fields/Microsoft_Visio_Provision_Date__c.field-meta.xml
<CustomField>
    <fullName>Microsoft_Visio_Provision_Date__c</fullName>
    <description>Date Microsoft Visio was provided.</description>
    <label>Microsoft Visio Provision Date</label>
    <type>Date</type>
</CustomField>