force-app/main/default/objects/Access_Control_Profile__c/fields/Microsoft_Visio_Revoke_Date__c.field-meta.xml
<CustomField>
    <fullName>Microsoft_Visio_Revoke_Date__c</fullName>
    <description>Date Microsoft Visio access was revoked.</description>
    <label>Microsoft Visio Revoke Date</label>
    <type>Date</type>
</CustomField>