force-app/main/default/objects/Access_Control_Profile__c/fields/Mobile_Phone__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Phone__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked if Mobile Phone access is needed</description>
    <inlineHelpText>NetNumber paid</inlineHelpText>
    <label>Mobile Phone</label>
    <type>Checkbox</type>
</CustomField>