force-app/main/default/objects/Access_Control_Profile__c/fields/Mobile_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Phone_Number__c</fullName>
    <inlineHelpText>NetNumber paid</inlineHelpText>
    <label>Mobile Phone Number</label>
    <type>Phone</type>
</CustomField>