force-app/main/default/objects/Access_Control_Profile__c/fields/Mobile_Phone_Plan__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Phone_Plan__c</fullName>
    <description>Checked when the employee need a mobile phone plan.</description>
    <label>Mobile Phone Plan</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Verizon</fullName>
            </value>
            <value>
                <fullName>AT&amp;T</fullName>
            </value>
            <value>
                <fullName>T-Mobile</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>