force-app/main/default/objects/Access_Control_Profile__c/fields/Mobile_Phone_Provision_Date__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Phone_Provision_Date__c</fullName>
    <description>Date Mobile Phone was provided.</description>
    <inlineHelpText>NetNumber paid</inlineHelpText>
    <label>Mobile Phone Provision Date</label>
    <type>Date</type>
</CustomField>