force-app/main/default/objects/Access_Control_Profile__c/fields/Mobile_Phone_Revoke_Date__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Phone_Revoke_Date__c</fullName>
    <description>Date Mobile Phone was revoked.</description>
    <label>Mobile Phone Revoke Date</label>
    <type>Date</type>
</CustomField>