force-app/main/default/objects/Access_Control_Profile__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Access Control Profile (Name)</relationshipLabel>
    <relationshipName>Access_Control_Profile</relationshipName>
    <type>Lookup</type>
</CustomField>