force-app/main/default/objects/Access_Control_Profile__c/fields/NetSuite_Provision_Date__c.field-meta.xml
<CustomField>
    <fullName>NetSuite_Provision_Date__c</fullName>
    <description>Date NetSuite was provided.</description>
    <label>NetSuite Provision Date</label>
    <type>Date</type>
</CustomField>