force-app/main/default/objects/Access_Control_Profile__c/fields/NetSuite_Revoke_Date__c.field-meta.xml
<CustomField>
    <fullName>NetSuite_Revoke_Date__c</fullName>
    <description>Date NetSuite was revoked.</description>
    <label>NetSuite Revoke Date</label>
    <type>Date</type>
</CustomField>