force-app/main/default/objects/Access_Control_Profile__c/fields/New_UCS_Provision_Date__c.field-meta.xml
<CustomField>
    <fullName>New_UCS_Provision_Date__c</fullName>
    <label>New UCS Provision Date</label>
    <type>Date</type>
</CustomField>