force-app/main/default/objects/Access_Control_Profile__c/fields/Office_365_Administration_Revoke_Date__c.field-meta.xml
<CustomField>
    <fullName>Office_365_Administration_Revoke_Date__c</fullName>
    <label>Office 365 Administration Revoke Date</label>
    <type>Date</type>
</CustomField>