force-app/main/default/objects/Access_Control_Profile__c/fields/Office_365_Archived_Deleted_Date__c.field-meta.xml
<CustomField>
    <fullName>Office_365_Archived_Deleted_Date__c</fullName>
    <description>The date Office 365 was archived/deleted.</description>
    <label>Office 365 Archived/Deleted Date</label>
    <type>Date</type>
</CustomField>