force-app/main/default/objects/Access_Control_Profile__c/fields/Office_365_Revoke_Date__c.field-meta.xml
<CustomField>
    <fullName>Office_365_Revoke_Date__c</fullName>
    <description>Date office 365 was revoked.</description>
    <label>Office 365 Revoke Date</label>
    <type>Date</type>
</CustomField>