force-app/main/default/objects/Access_Control_Profile__c/fields/Office_Location__c.field-meta.xml
<CustomField>
    <fullName>Office_Location__c</fullName>
    <description>Where the new hire will work.</description>
    <label>Office Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Frankfurt</fullName>
            </value>
            <value>
                <fullName>Lowell</fullName>
            </value>
            <value>
                <fullName>NN-TV</fullName>
            </value>
            <value>
                <fullName>Poland</fullName>
            </value>
            <value>
                <fullName>Prague</fullName>
            </value>
            <value>
                <fullName>Remote Office</fullName>
            </value>
            <value>
                <fullName>Toronto</fullName>
            </value>
            <value>
                <fullName>Utrecht</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>