force-app/main/default/objects/Access_Control_Profile__c/fields/Old_USC_Provision_Date__c.field-meta.xml
<CustomField>
    <fullName>Old_USC_Provision_Date__c</fullName>
    <label>Old USC Provision Date</label>
    <type>Date</type>
</CustomField>