force-app/main/default/objects/Access_Control_Profile__c/fields/Pardot_Provision_Date__c.field-meta.xml
<CustomField>
    <fullName>Pardot_Provision_Date__c</fullName>
    <description>Date Pardot was provided.</description>
    <label>Pardot Provision Date</label>
    <type>Date</type>
</CustomField>