force-app/main/default/objects/Access_Control_Profile__c/fields/Pardot_Revoke_Date__c.field-meta.xml
<CustomField>
    <fullName>Pardot_Revoke_Date__c</fullName>
    <description>Date Pardot was revoked.</description>
    <label>Pardot Revoke Date</label>
    <type>Date</type>
</CustomField>